--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,25 @@
 dist:     xenial
 sudo:     false
 language: go
+env:
+  - TF_ACC=true
 go:
   - 1.11.x
 git:
   depth: 1
   go_import_path: github.com/openshift-metalkube/terraform-provider-ironic
 install:        true
+services:
+  - docker
 before_script:
-  - curl -sLo /tmp/terraform.zip https://releases.hashicorp.com/terraform/0.11.10/terraform_0.11.10_linux_amd64.zip
-  - sudo unzip /tmp/terraform.zip -d /usr/local/bin
+  - docker run -d --net host --privileged --name mariadb --entrypoint /bin/runmariadb quay.io/metalkube/metalkube-ironic
+  - docker run -d --net host --privileged -e "IP=0.0.0.0" --name ironic quay.io/metalkube/metalkube-ironic
+  - docker run --net host -e TARGETS=127.0.0.1:3306,127.0.0.1:6385 -e TIMEOUT=60 waisbrot/wait
 script:
   - make fmt
   - make lint
   - make test
+after_failure:
+  - docker logs mariadb
+  - docker exec ironic cat /var/log/ironic/ironic-api.log
+  - docker exec ironic cat /var/log/ironic/ironic-conductor.log
