--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,5 +1,5 @@
 [[constraint]]
-  branch = "master"
+  revision = "7892efa714f10951c5483a28c7471d8051b12975"
   name = "github.com/gophercloud/gophercloud"
 
 [[constraint]]
