--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -8,7 +8,7 @@
 
 [[constraint]]
   name = "github.com/hashicorp/terraform"
-  version = "v0.12.0-rc1"
+  version = "v0.12.0"
 
 [prune]
   go-tests = true
