Fix test usage of ironic image

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ before_install:
   - sudo apt-get install -y genisoimage
 before_script:
   - docker run -d --net host --privileged --name mariadb --entrypoint /bin/runmariadb quay.io/metal3-io/ironic:master
-  - docker run -d --net host --privileged -e "PROVISIONING_IP=127.0.0.1" --name ironic quay.io/metal3-io/ironic:master
+  - docker run -d --net host --name ironic-api --entrypoint /bin/runironic-api -e "PROVISIONING_IP=127.0.0.1" quay.io/metal3-io/ironic:master
+  - docker run -d --net host --name ironic-conductor --entrypoint /bin/runironic-conductor -e "PROVISIONING_IP=127.0.0.1" quay.io/metal3-io/ironic:master
   - docker run -d --net host --privileged -e "PROVISIONING_IP=127.0.0.1" --net host quay.io/metal3-io/ironic-inspector:master
   - docker run --net host -e TARGETS=127.0.0.1:3306,127.0.0.1:6385,127.0.0.1:5050 -e TIMEOUT=60 waisbrot/wait
 script:
@@ -24,5 +25,5 @@ script:
   - make test
 after_failure:
   - docker logs mariadb
-  - docker exec ironic cat /shared/log/ironic/ironic-api.log
-  - docker exec ironic cat /shared/log/ironic/ironic-conductor.log
+  - docker exec ironic-api cat /shared/log/ironic/ironic-api.log
+  - docker exec ironic-conductor cat /shared/log/ironic/ironic-conductor.log
