--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           go-version: 1.19
 
       - name: Install dependencies
-        run: sudo apt-get install -y genisoimage docker netcat
+        run: sudo apt-get install -y genisoimage podman netcat
 
       - name: Start Ironic and Inspector
         run: ./hack/local_ironic.sh
@@ -41,10 +41,6 @@ jobs:
       - name: Run tests
         run: make acceptance
 
-      - name: Collect Ironic logs
+      - name: Collect logs
         if: always()
-        run: docker logs ironic
-
-      - name: Collect Inspector logs
-        if: always()
-        run: docker logs inspector
+        run: ./hack/collect_logs.sh
